@@ -4,3 +4,4 @@ include scripts/python-csp
 recursive-include applications/
 recursive-include jythonsetup/
 recursive-include csp/
+recursive-include bsp/
