@@ -33,7 +33,8 @@ subplots_adjust(hspace=0.4, wspace=0.6)
 t = array([2, 4, 8, 16, 32, 64, 128, 256, 512, 1024])
 
 
-yvals = {1:{'procs':array([314.430736, 157.215372, 78.607687, 39.303844,
+yvals = {1:{'procs':array([350.057995, 
+	314.430736, 157.215372, 78.607687, 39.303844,
 						   19.651922, 9.825962, 4.912981, 2.456491, None, None]),
 			'threads':array([314.430851, 157.215429, 78.607716, 39.303859,
 							 19.651930, 9.825965, 4.912983, 2.456492, None, None]),
